[package]
name = "getquote"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
bytes = "0.5"
protobuf = "2.17.0"
serde = { version = "1.0", features = ["derive"] }
